# manifestation-journal

./: .gitignore  README.MD  pyproject.toml
data/: some_example_data.csv
frontend/src/: App.css  App.js  Chat.css  Chat.js  Home.css  Home.js
notebooks/training/: intentclf.ipynb
src/backend/: classifier.py  main.py  responses.json
visualizations/: evaluation_metrics.txt
